<resources>
    <string name="app_name">Calculadora</string>
    <string name="edtValor1" />
    <string name="edtTextValor2" />
    <string name="edtValor2" />
    <string name="btnSomar" />
    <string name="edtResultado" />
    <string name="dividir">Dividir</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="somar">Somar</string>
    <string name="subtrair">Subtrair</string>
    <string name="valor_1">Valor 1</string>
    <string name="valor_2">Valor 2</string>
</resources>
