<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marlonourives.calculadora.CalculadoraActivity">

    <EditText
        android:id="@+id/edtValor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtValor1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="LabelFor"
        app:layout_constraintHorizontal_bias="0.291"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:digits="0123456789"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="52dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/edtValor1" />

    <EditText
        android:id="@+id/edtValor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtValor2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="LabelFor"
        app:layout_constraintHorizontal_bias="0.329"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:digits="0123456789"/>

    <EditText
        android:id="@+id/edtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:text="@string/edtResultado"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtValor2"
        tools:ignore="LabelFor"
        android:digits="0123456789"/>

    <Button
        android:id="@+id/btnSomar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/somar"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnMultiplicar"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.348"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/edtResultado" />

    <Button
        android:id="@+id/btnSubtrair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtrair"
        android:layout_marginRight="137dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicar" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplicar"
        android:layout_marginRight="137dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edtResultado" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dividir"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnSubtrair"
        android:layout_marginRight="8dp"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSomar"
        app:layout_constraintHorizontal_bias="0.321" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salvar Valor"
        tools:layout_editor_absoluteX="122dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSubtrair" />

</android.support.constraint.ConstraintLayout>
